# corbis-challenge

./: .gitignore  CHANGLOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  stock_db.sql
src/: docker-compose.yml  manage.py  pytest.ini  requirements.txt
src/base/: models.py  views.py
src/base/migrations/: 0001_initial.py  0002_alter_item_tipe.py  0003_auto_20230122_2054.py
src/base/templates/: base.html  item_confirm_delete.html  item_form.html  item_list.html  login.html  register.html
src/stockManager/: .env-example  asgi.py  settings.py  urls.py  wsgi.py
src/test/: test_item.py
src/tests/: test_items.py  tests.ini
