[tool.poetry]
name = "corvis-challenge"
version = "0.1.0"
description = ""
authors = ["WolF2214 <manu.perea13@gmail.com>"]
readme = "README.md"
packages = [{include = "corvis_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
mysqlclient = "^2.1.1"
django-mysql = "^4.8.0"
django-environ = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
